# assistant-cli

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
scripts/: bump-version.mjs  release.mjs
src/: main.rs
